--- a/SpringBoot-Study/springboot-03-web/src/main/resources/templates/index.html
+++ b/SpringBoot-Study/springboot-03-web/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 
       <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
       <input type="text" id="inputEmail" name="username" class="form-control" th:placeholder="#{login.username}" required autofocus>
-      <input type="password" id="inputPassword" name="password" class="form-control" th:placeholder="#{login.password}" required>
+      <input type="password" id="inputPassword" name="password" class="form-control" th:placeholder="#{login.pass}" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me" th:text="#{login.remember}">
